--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <body>
     <p style="color:Red; font-size:48pt">CYLiu Test for Github</p>
-    <img src="buterfly.jpg">
+    <img src="butterfly.jpg">
 </body>
 </html>
