--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p style="color:Red; font-size:48pt">CK Liu Test1 for Github</p>
+    <p style="color:Red; font-size:48pt">ChiaKai Liu Test for Github</p>
     <img src="butterfly.jpg">
 </body>
 </html>
